correct gdpr on mobile

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -2,6 +2,10 @@ html {
    scroll-behavior: smooth !important;
 }
 
+html,body{
+   overflow-x: hidden;
+}
+
 .main {
    /* make sure to cover the screen */
    min-height: 100vh;
